--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ethersproject/shims": "^5.7.0",
     "ethers": "^5.7.1",
+    "mobx": "^6.6.2",
+    "mobx-react": "^7.5.3",
     "node-libs-react-native": "^1.2.1",
     "react": "18.1.0",
     "react-native": "0.70.1",
