--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -212,10 +212,10 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('your_key_name.keystore')
+            storePassword 'password123'
+            keyAlias 'your_key_alias'
+            keyPassword 'password123'
         }
     }
     buildTypes {
